<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity"
        android:orientation="vertical">
        <LinearLayout
            style="@style/user_bar"
            android:background="@color/grey">
            <LinearLayout
                style="@style/container"
                android:layout_weight="0.25">
                <TextView
                    style="@style/text_user_bar.value"
                    android:text="@string/rating_value"/>
                <TextView
                    style="@style/text_user_bar.name"
                    android:text="@string/rating"/>
            </LinearLayout>
            <View
                style="@style/line_user_bar"/>
            <LinearLayout
                style="@style/container"
                android:layout_weight="0.5">
                <TextView
                    style="@style/text_user_bar.value"
                    android:text="@string/code_lines_value"/>
                <TextView
                    style="@style/text_user_bar.name"
                    android:text="@string/code_lines"/>
            </LinearLayout>
            <View
                style="@style/line_user_bar"/>
            <LinearLayout
                style="@style/container"
                android:layout_weight="0.25">
                <TextView
                    style="@style/text_user_bar.value"
                    android:text="@string/projects_value"/>
                <TextView
                    style="@style/text_user_bar.name"
                    android:text="@string/projects"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/info_bar">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>
            <LinearLayout
                style="@style/block_info">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/information"
                        android:id="@+id/phone_et"
                        android:layout_width="match_parent"
                        android:inputType="phone"
                        android:hint="@string/mobile"
                        android:text="@string/mobile_number"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/separator"/>
        <LinearLayout
            style="@style/info_bar">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>
            <LinearLayout
                style="@style/block_info">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/information"
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:text="@string/email_address"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/separator"/>
        <LinearLayout
            style="@style/info_bar">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk_circle"/>
            <LinearLayout
                style="@style/block_info">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/information"
                        android:id="@+id/vk_et"
                        android:layout_width="match_parent"
                        android:hint="@string/vk_profile"
                        android:text="@string/vk_profile_address"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/separator"/>
        <LinearLayout
            style="@style/info_bar">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_circle"/>
            <LinearLayout
                style="@style/block_info">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/information"
                        android:id="@+id/git_et"
                        android:layout_width="match_parent"
                        android:hint="@string/repository"
                        android:text="@string/repository_address"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/separator"/>
        <LinearLayout
            style="@style/info_bar">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>
            <LinearLayout
                style="@style/block_info">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/information"
                        android:id="@+id/me_et"
                        android:layout_width="wrap_content"
                        android:hint="@string/about_me"
                        android:text="@string/about_me_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>